fix: Adjust sidebar width to improve layout and add high contrast to badges when no tech is in grid

--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ body {
 }
 
 .gridContainer__sidebar {
-	width: 370px;
+	width: 400px;
 	background-color: var(--accent-a1);
 	border: 1px solid var(--gray-a2);
 	box-shadow:
